--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <h1 class="footer-heading"><a href= "">{{ site.title }}</a></h1>
+    <h1 class="footer-heading"><a href="{{ site.url }}"</a>{{ site.title }}</h1>
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
@@ -47,7 +47,6 @@
 
       <div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
-        <p class="text">Powered by Jekyll 2014.10</p>
       </div>
     </div>
 
