--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,12 @@
 
     {% include footer.html %}
 
-
+<!-- JiaThis Button BEGIN -->
+<script type="text/javascript">
+var jiathis_config = {data_track_clickback:'true'};
+</script>
+<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?uid=1410620472538495" charset="utf-8"></script>
+<!-- JiaThis Button END -->
 
 <!-- UJian Button BEGIN -->
 <script type="text/javascript" src="http://v1.ujian.cc/code/ujian.js?type=slide&fade=1&uid=1975461"></script>
