--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,16 +15,35 @@
 
     {% include footer.html %}
 
-<!-- JiaThis Button BEGIN -->
-<script type="text/javascript">
-var jiathis_config = {data_track_clickback:'true'};
-</script>
-<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?uid=1410620472538495" charset="utf-8"></script>
-<!-- JiaThis Button END -->
 
+
+
+<!-- JiaThis Button BEGIN -->
+<div class="jiathis_share_slide jiathis_share_16x16" id="jiathis_share_slide">
+<div class="jiathis_share_slide_top" id="jiathis_share_title"></div>
+<div class="jiathis_share_slide_inner">
+<div class="jiathis_style">
+<a class="jiathis_button_weixin"></a>
+<a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jtico jtico_ji
+athis" target="_blank"></a>
+<script type="text/javascript">
+var jiathis_config = {data_track_clickback:'true'
+	,slide:{
+		divid:'jiathis_main',
+		pos:'right',
+		gt:'true'
+	}
+};
+</script>
+<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=141062
+0472538495" charset="utf-8"></script>	
+<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_slide.js"
+ charset="utf-8"></script>
+</div></div></div>
+<!-- JiaThis Button END -->
 <!-- UJian Button BEGIN -->
-<script type="text/javascript" src="http://v1.ujian.cc/code/ujian.js?type=slide&fade=1&uid=1975461"></script>
-<a href="http://www.ujian.cc" style="border:0;"><img src="http://img.ujian.cc/pixel.png" alt="友荐云推荐" style="border:0;padding:0;margin:0;" /></a>
+	<script type="text/javascript" src="http://v1.ujian.cc/code/ujian.js?typ
+e=slideuid=1410620472538495"></script>
 <!-- UJian Button END -->
 
 </body>
