--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,9 +11,39 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
+
+  
+<br />
+<!-- JiaThis Button BEGIN -->
+<div class="jiathis_style_32x32">
+	<a class="jiathis_button_qzone"></a>
+	<a class="jiathis_button_tsina"></a>
+	<a class="jiathis_button_tqq"></a>
+	<a class="jiathis_button_weixin"></a>
+	<a class="jiathis_button_renren"></a>
+	<a href="http://www.jiathis.com/share?uid=1975461" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
+	<a class="jiathis_counter_style"></a>
+</div>
+<script type="text/javascript">
+var jiathis_config = {data_track_clickback:'true'};
+</script>
+<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1410620472538495" charset="utf-8"></script>
+<!-- JiaThis Button END -->
+<!-- UJian Button BEGIN -->
+	<div class="ujian-hook"></div>
+	<script type="text/javascript" src="http://v1.ujian.cc/code/ujian.js"></script>
+<!-- UJian Button END -->
+<h3 align="right"><a href="#top" target="_self">返回顶部</a></h3>
+
+<br />
+
+<!-- duoshuo start -->
+
 {% if site.duoshuo and page.comments == true %}  
   <section>  
     <div id="comments" aria-live="polite">{% include post/duoshuo.html %}</div>  
   </section>  
 {% endif %}  
+<!-- duoshuo end -->
+
 </div>
