--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,13 +37,8 @@ var jiathis_config = {data_track_clickback:'true'};
 
 <br />
 
-<!-- duoshuo start -->
-
-{% if site.duoshuo and page.comments == true %}  
-  <section>  
-    <div id="comments" aria-live="polite">{% include post/duoshuo.html %}</div>  
-  </section>  
-{% endif %}  
-<!-- duoshuo end -->
-
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1975461"></script>
+<!-- UY END -->
 </div>
