--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,8 @@
         </svg>
       </a>
 
-      <div class="trigger">
+<!--      <div class="trigger"> -->
+          <div>
 
         {% for page in site.pages %}
           {% if page.title %}
