--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,8 +13,8 @@
         </svg>
       </a>
 
-<!--      <div class="trigger"> -->
-          <div>
+      <div class="trigger"> 
+
 
         {% for page in site.pages %}
           {% if page.title %}
