修改code css底色为#4f4f4f

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -2,7 +2,7 @@
  * Syntax highlighting styles
  */
 .highlight {
-    background: gray;
+    background: #4f4f4f;
     @extend %vertical-rhythm;
 
     .c     { color: #998; font-style: italic } // Comment
